<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        <TextView
            android:layout_span="3"
            android:text="@string/EnterIndividualPay" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >

        <EditText
            android:id="@+id/textViewName1"
            android:hint="@string/EnterName"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/Paid"
            android:padding="10dip"/>
        <EditText
            android:id="@+id/textAmount1"
            android:hint="@string/EnterAmount"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >

        <EditText
            android:id="@+id/textViewName2"
            android:hint="@string/EnterName"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/Paid"
            android:padding="10dip"/>
        <EditText
            android:id="@+id/textAmount2"
            android:hint="@string/EnterAmount"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip" >

        <EditText
            android:id="@+id/textViewName3"
            android:hint="@string/EnterName"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/Paid"
            android:padding="10dip"/>
        <EditText
            android:id="@+id/textAmount3"
            android:hint="@string/EnterAmount"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <Button
            android:id="@+id/Settle"
            android:layout_column="3"
            android:text="@string/generate_settlement_text"
            android:onClick="onSettle" />
    </TableRow>

    </TableLayout>
